--- a/datasets/notebooks/T1 - 1 - Titanic.ipynb
+++ b/datasets/notebooks/T1 - 1 - Titanic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "'C:\\\\orlando\\\\repo_github\\\\python-ml-course\\\\datasets\\\\notebooks'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "4  Montreal, PQ / Chesterville, ON  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        "       'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U'], dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1333,7 @@
        "[3334 rows x 21 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
        " 'Churn?']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
        "21"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
        " 'Churn?': []}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,14 +1481,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El data set tiene 3332 filas y 21 columnas\n"
+      "El data set tiene 3333 filas y 21 columnas\n"
      ]
     }
    ],
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1708,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2130,7 +2130,7 @@
        "[3333 rows x 21 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2155,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2265,7 @@
        "4    Gold  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,22 +2295,104 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 72,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import urllib3\n",
-    "http = urllib3.PoolManager()\n",
-    "r = http.request('GET', 'http://www.winterolympicsmedals.com/medals.csv')\n",
-    "r.status\n",
-    "response = r.data\n",
-    "\n"
+    "## ejercicio de descarga de datos con urllib3\n",
+    "vamos a hacer un ejemplo de libraria urllib3, obtener datos de una url externa, procesar, convrtir en dataframe de pyhon y guardarlos en csv local, o excel o json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el estado de la respuesta es 200\n",
+      "El data set tiene 2312 filas y 8 columnas\n",
+      "   Year      City       Sport      Discipline  NOC       Event Event gender  \\\n",
+      "0  1924  Chamonix     Skating  Figure skating  AUT  individual            M   \n",
+      "1  1924  Chamonix     Skating  Figure skating  AUT  individual            W   \n",
+      "2  1924  Chamonix     Skating  Figure skating  AUT       pairs            X   \n",
+      "3  1924  Chamonix   Bobsleigh       Bobsleigh  BEL    four-man            M   \n",
+      "4  1924  Chamonix  Ice Hockey      Ice Hockey  CAN  ice hockey            M   \n",
+      "\n",
+      "    Medal  \n",
+      "0  Silver  \n",
+      "1    Gold  \n",
+      "2    Gold  \n",
+      "3  Bronze  \n",
+      "4    Gold  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "medals_url = \"http://winterolympicsmedals.com/medals.csv\"\n",
+    "medals_data = pd.read_csv(medals_url)\n",
+    "\n",
+    "#Primero importamos la libreria y hacemos conexion con la web de datos\n",
+    "import urllib3\n",
+    "http = urllib3.PoolManager()\n",
+    "r = http.request('GET',medals_url)\n",
+    "print(\"el estado de la respuesta es %d\" %(r.status))\n",
+    "response = r.data\n",
+    "\n",
+    "# El objeto response contiene un string binario, se convierte a string UTF-8\n",
+    "str_data = response.decode('utf-8')\n",
+    "\n",
+    "# Dividimos el string en array de filas, separando por intros\n",
+    "lines = str_data.split(\"\\n\")\n",
+    "\n",
+    "#Extrae cabecera de la primera fila\n",
+    "col_names = lines[0].split(\",\")\n",
+    "n_cols = len(col_names)\n",
+    "\n",
+    "\n",
+    "# Dicionario vacío para volcar la informacion procesada desde la url externa\n",
+    "counter = 0\n",
+    "main_dict = {}\n",
+    "for col in col_names:\n",
+    "    main_dict[col] = []\n",
+    "    \n",
+    "    \n",
+    "# procesamos fila a fila la informacion para ir llenando el diccionario \n",
+    "for line in lines:\n",
+    "    #Nos saltamos la primera linea que es la cabecera que ya procesamos\n",
+    "    if(counter>0):\n",
+    "        #dividimos cada string por las comas como elemento separador\n",
+    "       values = line.strip().split(\",\")\n",
+    "       #añadimos cada valor a la respectiva columna del diccionario\n",
+    "       for i in range(len(col_names)):\n",
+    "           main_dict[col_names[i]].append(values[i])\n",
+    "    counter +=1\n",
+    "\n",
+    "print(\"El data set tiene %d filas y %d columnas\"%(counter, n_cols))\n",
+    "       \n",
+    "#concertimos el diccionario procesdo a DATAFRAME y comprobamos que los datos son correctos\n",
+    "medals_df = pd.DataFrame(main_dict)\n",
+    "print(medals_df.head())\n",
+    "\n",
+    "#elegimos donde guardarlo (En la carpeta athletes es donde tiene mas sentido por el contexto del analisis)\n",
+    "mainpath = \"C:/orlando/repo_github/python-ml-course/datasets/\"\n",
+    "\n",
+    "filename = \"athletes/orly_test_downloaded_medals.\"\n",
+    "fullpath = os.path.join(mainpath,filename) \n",
+    "\n",
+    "\n",
+    "#Guardamos en csv, json, excel\n",
+    "medals_df.to_csv(fullpath + \"csv\")\n",
+    "medals_df.to_json(fullpath + \"json\")\n",
+    "medals_df.to_excel(fullpath + \"xls\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2320,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2412,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mError\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-74-3d8bf9431c00>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-51-3d8bf9431c00>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mError\u001b[0m: iterator should return strings, not int (did you open the file in text mode?)"
      ]
     }
@@ -2338,6 +2420,221 @@
    "source": [
     "for row in cr:\n",
     "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trabajar con ficheros XLS, XLSX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>ticket</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>cabin</th>\n",
+       "      <th>embarked</th>\n",
+       "      <th>boat</th>\n",
+       "      <th>body</th>\n",
+       "      <th>home.dest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Allen, Miss. Elisabeth Walton</td>\n",
+       "      <td>female</td>\n",
+       "      <td>29.0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24160</td>\n",
+       "      <td>211.3375</td>\n",
+       "      <td>B5</td>\n",
+       "      <td>S</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>St Louis, MO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Allison, Master. Hudson Trevor</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.9167</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>113781</td>\n",
+       "      <td>151.5500</td>\n",
+       "      <td>C22 C26</td>\n",
+       "      <td>S</td>\n",
+       "      <td>11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Montreal, PQ / Chesterville, ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Allison, Miss. Helen Loraine</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>113781</td>\n",
+       "      <td>151.5500</td>\n",
+       "      <td>C22 C26</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Montreal, PQ / Chesterville, ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Allison, Mr. Hudson Joshua Creighton</td>\n",
+       "      <td>male</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>113781</td>\n",
+       "      <td>151.5500</td>\n",
+       "      <td>C22 C26</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>Montreal, PQ / Chesterville, ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Allison, Mrs. Hudson J C (Bessie Waldo Daniels)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>25.0000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>113781</td>\n",
+       "      <td>151.5500</td>\n",
+       "      <td>C22 C26</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Montreal, PQ / Chesterville, ON</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pclass  survived                                             name     sex  \\\n",
+       "0       1         1                    Allen, Miss. Elisabeth Walton  female   \n",
+       "1       1         1                   Allison, Master. Hudson Trevor    male   \n",
+       "2       1         0                     Allison, Miss. Helen Loraine  female   \n",
+       "3       1         0             Allison, Mr. Hudson Joshua Creighton    male   \n",
+       "4       1         0  Allison, Mrs. Hudson J C (Bessie Waldo Daniels)  female   \n",
+       "\n",
+       "       age  sibsp  parch  ticket      fare    cabin embarked boat   body  \\\n",
+       "0  29.0000      0      0   24160  211.3375       B5        S    2    NaN   \n",
+       "1   0.9167      1      2  113781  151.5500  C22 C26        S   11    NaN   \n",
+       "2   2.0000      1      2  113781  151.5500  C22 C26        S  NaN    NaN   \n",
+       "3  30.0000      1      2  113781  151.5500  C22 C26        S  NaN  135.0   \n",
+       "4  25.0000      1      2  113781  151.5500  C22 C26        S  NaN    NaN   \n",
+       "\n",
+       "                         home.dest  \n",
+       "0                     St Louis, MO  \n",
+       "1  Montreal, PQ / Chesterville, ON  \n",
+       "2  Montreal, PQ / Chesterville, ON  \n",
+       "3  Montreal, PQ / Chesterville, ON  \n",
+       "4  Montreal, PQ / Chesterville, ON  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_path = \"C:/orlando/repo_github/python-ml-course/datasets/\"\n",
+    "filename= \"titanic/titanic3.xls\"\n",
+    "filename2=\"titanic/titanic3.xlsx\"\n",
+    "\n",
+    "fullpath = os.path.join(main_path,filename)\n",
+    "titanic2 = pd.read_excel(fullpath,\"titanic3\") # el segundo parametro es el nombre de la pestaña en excel\n",
+    "#titanic2.head()\n",
+    "\n",
+    "fullpath2 = os.path.join(main_path,filename2)\n",
+    "titanic3 = pd.read_excel(fullpath2,\"titanic3\") # el segundo parametro es el nombre de la pestaña en excel\n",
+    "titanic3.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Crear csv, con to_csv o excel con to_xls\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic3.to_csv(main_path + \"/titanic/titanic_creado.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic3.to_excel(main_path + \"/titanic/titanic_creado.xls\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic3.to_json(main_path + \"/titanic/titanic_creado.json\")"
    ]
   },
   {
@@ -2364,7 +2661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
